objects/LLC_BI__Product_Template_Join__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>The LLC_BI__Template_Records__c object is is not currently used with the LLC_BI__Product__c object, so this field is currently not used.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipName>FeeProductJoins</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template__c</fullName>
        <description>The LLC_BI__Template_Records__c object is is not currently used with the LLC_BI__Product__c object, so this field is currently not used.</description>
        <label>Template</label>
        <referenceTo>LLC_BI__Template_Records__c</referenceTo>
        <relationshipLabel>Product Template Join</relationshipLabel>
        <relationshipName>ProductTemplateJoins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Template Join</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTJ - {00000000}</displayFormat>
        <label>ProductTemplateJoin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Template Join</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>